販売統計情報 集計・表示処理作成

--- a/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
@@ -1,6 +1,8 @@
 {% extends 'FruitSalesMgmt/base.html' %}
 
 {% block content %}
+    <h2>果物マスタ管理</h2>
+    <p><a href='{% url 'top' %}'>TOP</a> > 果物マスタ管理</p>
     <table class='table'>
         <thead>
             <tr>
