--- a/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
@@ -1,6 +1,8 @@
 {% extends 'FruitSalesMgmt/base.html' %}
 
 {% block content %}
+    <h2>販売情報管理</h2>
+    <p><a href='{% url 'top' %}'>TOP</a> > 販売情報管理</p>
     <table class='table'>
         <thead>
             <tr>
