--- a/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
@@ -1,29 +1,34 @@
 {% extends 'FruitSalesMgmt/base.html' %}
 
 {% block content %}
-    <h2>果物マスタ管理</h2>
-    <p><a href='{% url 'top' %}'>TOP</a> > 果物マスタ管理</p>
-    <table class='table'>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>名称</th>
-                <th>単価</th>
-                <th>登録日時</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for fruit in fruits %}
+    <div class='fruits-list'>
+        <h2>果物マスタ管理</h2>
+        <p><a href='{% url 'top' %}'>TOP</a> > 果物マスタ管理</p>
+        <table class='table table-striped table-bordered' id='fruits-table'>
+            <thead>
                 <tr>
-                    <td>{{ fruit.pk }}</td>
-                    <td>{{ fruit.name }}</td>
-                    <td>{{ fruit.price }}</td>
-                    <td>{{ fruit.reg_date }}</td>
-                    <td><a href="{% url 'fruits_edit' pk=fruit.pk %}">編集</a> <a href="{% url 'fruits_remove' pk=fruit.pk %}">削除</a></td>
+                    <th>ID</th>
+                    <th>名称</th>
+                    <th>単価</th>
+                    <th>登録日時</th>
+                    <th></th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <input type="button" value="新規追加" onClick="location.href='{% url 'fruits_new' %}';"></input>
+            </thead>
+            <tbody>
+                {% for fruit in fruits %}
+                    <tr>
+                        <td>{{ fruit.pk }}</td>
+                        <td>{{ fruit.name }}</td>
+                        <td>{{ fruit.price }}</td>
+                        <td>{{ fruit.reg_date }}</td>
+                        <td><a href="{% url 'fruits_edit' pk=fruit.pk %}">編集</a> <a href="{% url 'fruits_remove' pk=fruit.pk %}">削除</a></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <input type="button" class='fruits-new-btn' value="新規追加" onClick="location.href='{% url 'fruits_new' %}';"></input>
+    </div>
+    <script>
+        set_datatable('#fruits-table', 0, 'desc');
+    </script>
 {% endblock %}
