--- a/FruitSalesMgmt/templates/FruitSalesMgmt/sales_edit.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/sales_edit.html
@@ -1,9 +1,15 @@
 {% extends 'FruitSalesMgmt/base.html' %}
 
 {% block content %}
-    <h2>販売情報登録</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">登録</button>
-    </form>
+    <div class='sales-edit'>
+        <div class='sales-edit-container'>
+            <h2>販売情報登録</h2>
+            <form method="POST" class="post-form">{% csrf_token %}
+                <div class='sales-edit-form'>
+                    {{ form.as_p }}
+                </div>
+                <button type="submit">登録</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
