--- a/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_edit.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_edit.html
@@ -4,7 +4,7 @@
     <div class='fruits-edit'>
         <div class='fruits-edit-container'>
             <h2>果物登録</h2>
-            <form method="POST" class="post-form">{% csrf_token %}
+            <form method="POST">{% csrf_token %}
                 <div class='fruits-edit-form'>
                     {{ form.as_p }}
                 </div>
