--- a/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
@@ -5,6 +5,11 @@
         <h2>果物マスタ管理</h2>
         <p><a href='{% url 'top' %}'>TOP</a> > 果物マスタ管理</p>
         <table class='table table-striped table-bordered' id='fruits-table'>
+            <col width="10%">
+            <col width="30%">
+            <col width="10%">
+            <col width="30%">
+            <col width="20%">
             <thead>
                 <tr>
                     <th>ID</th>
