--- a/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
@@ -6,6 +6,12 @@
         <p><a href='{% url 'top' %}'>TOP</a> > 販売情報管理</p>
         <p class='uploaded-message'>{{ uploaded_message }}</p>
         <table class='table table-striped table-bordered' id='sales-table'>
+            <col width="20%">
+            <col width="10%">
+            <col width="20%">
+            <col width="30%">
+            <col width="10%">
+            <col width="10%">
             <thead>
                 <tr>
                     <th>果物</th>
@@ -33,7 +39,7 @@
     </div>
     <div class='sales-data-upload-form'>
         <h3>CSV一括登録</h3>
-        <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
+        <form method="POST" enctype="multipart/form-data">{% csrf_token %}
             {{ upload_form.as_p }}
             <button type="submit">CSVアップロード</button>
         </form>
