--- a/FruitSalesMgmt/templates/FruitSalesMgmt/stats.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/stats.html
@@ -8,6 +8,9 @@
         <p class='all-stats-total'>{{ all_stats_total }}円</p>
         <h3>月別</h3>
         <table class='table table-striped table-bordered'>
+            <col width="15%">
+            <col width="15%">
+            <col width="70%">
             <thead>
                 <tr>
                     <th>月</th>
@@ -27,6 +30,9 @@
         </table>
         <h3>日別</h3>
         <table class='table table-striped table-bordered'>
+            <col width="15%">
+            <col width="15%">
+            <col width="70%">
             <thead>
                 <tr>
                     <th>日</th>
