import整理、データのdump

--- a/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/fruits_list.html
@@ -34,6 +34,6 @@
         <input type="button" class='fruits-new-btn' value="新規追加" onClick="location.href='{% url 'fruits_new' %}';"></input>
     </div>
     <script>
-        set_datatable('#fruits-table', 0, 'desc');
+        set_datatable('#fruits-table');
     </script>
 {% endblock %}
