--- a/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
@@ -45,6 +45,6 @@
         </form>
     </div>
     <script>
-        set_datatable('#sales-table', 3, 'desc');
+        set_datatable('#sales-table');
     </script>
 {% endblock %}
