--- a/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
+++ b/FruitSalesMgmt/templates/FruitSalesMgmt/sales_list.html
@@ -35,7 +35,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <input type="button" class='sales-new-btn' value="販売情報登録" onClick="location.href='{% url 'sales_new' %}';"></input>
+        <input type="button" class='sales-new-btn' value="販売情報登録" onClick="location.href='{% url 'sales_create' %}';"></input>
     </div>
     <div class='sales-data-upload-form'>
         <h3>CSV一括登録</h3>
